Services card spacing corrected

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,6 +48,10 @@
     height: 300px;
 }
 
+#body-text {
+    height: 100px;
+}
+
 .shadow {
     box-shadow: 0 .5rem 1rem rgba(119, 119, 119, 0.61) !important;
 }
